fix(*): fix bugs for cpu run

--- a/env.yml
+++ b/env.yml
@@ -1,18 +1,15 @@
 name: torch
 channels:
+  - pyorch
   - conda-forge
   - defaults
 dependencies:
   - python=3
-  - pytorch-cpu 
+  - pytorch-cpu
   - torchvision-cpu
-  - ipykernel # used to create jupyter kernel
-  - ipython
-  - pip
   - numpy
-  - scipy
-  - matplotlib
-  - jupyterlab
+  - h5py
+  - tqdm
 
 
 prefix: $CONDA_PREFIX/envs
